updated create bot

--- a/views/pages/createbot.ejs
+++ b/views/pages/createbot.ejs
@@ -455,7 +455,7 @@
                                                                 <i class="mdi mdi-clock text-white"></i>
                                                             </span>
                                                             </div>
-                                                            <input type="number" id="message-delay"
+                                                            <input type="text" id="message-delay"
                                                                 min="100" max="5000"
                                                                 class="form-control form-control-lg" 
                                                                 style="font-size: 14px" 
@@ -473,7 +473,7 @@
                                                                 <i class="mdi mdi-counter text-white"></i>
                                                             </span>
                                                             </div>
-                                                            <input type="number" id="amount-comment"
+                                                            <input type="text" id="amount-comment"
                                                                 min="0" max="200"
                                                                 class="form-control form-control-lg" 
                                                                 style="font-size: 14px" 
