--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -31,4 +31,6 @@
     <link rel="icon" href="assets/images/favicon/favicon.ico" type="image/x-icon">
 </head>
     <%- body %>
+
+    <script src="app/js/main/_navbar.js"></script>
 </html>
