--- a/views/partials/_scripts.ejs
+++ b/views/partials/_scripts.ejs
@@ -11,3 +11,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
 <script src="app/js/mk-notifications.js"></script>
 <script src="app/js/jquery.datetimepicker.full.min.js"></script>
+
+<!-- Puser:js -->
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://js.pusher.com/4.1/pusher.min.js"></script>
+<!-- End pusher -->
