--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -136,7 +136,7 @@
                         <div class="col-md-5">
                             <div class="card">
                                 <div class="card-body">
-                                    <div class="form-inline pl-3">
+                                    <div class="form-inline pl-3 pb-2">
                                         <h4 class="text-success">
                                             <strong>
                                                 Quick Stats
