--- a/views/pages/notifications.ejs
+++ b/views/pages/notifications.ejs
@@ -122,6 +122,10 @@
                                     <% } %>
     
                                 <% } %>
+
+                                <% if(objType.data == 'TypeError') { %>
+
+                                <% } %>
                                 </div>
                             </div>
     
