--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -138,7 +138,7 @@
                         <div class="col-md-5">
                             <div class="card">
                                 <div class="card-body">
-                                    <div class="form-inline pl-3 pb-2">
+                                    <div class="form-inline pl-3 pb-0">
                                         <h4 class="text-success">
                                             <strong>
                                                 Quick Stats
@@ -154,10 +154,15 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="form-group">
+                                    <div class="form-group pb-0 mb-0">
                                         <table class="table table-hover">
                                             <thead class="bg-secondary">
                                                 <tr class="text-center">
+                                                    <th scope="col">
+                                                        <strong>
+                                                        Status
+                                                        </strong>
+                                                    </th>
                                                     <th scope="col">
                                                         <strong>
                                                         Bot
