--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -13,6 +13,8 @@
             <div class="main-panel">
                 <div class="content-wrapper"> 
                     <div class="card">
+                        <% console.log(data) %>
+
                         
                     </div>
                 </div>
