updated profile page

--- a/public/app/css/custom-style.css
+++ b/public/app/css/custom-style.css
@@ -95,3 +95,16 @@
         display: none;
     }
 }
+
+/* .content-wrapper {
+    padding: 70px;
+}
+.form-group{
+    width: 50%;
+}
+label {
+    font-size: 20px;
+}
+.changePass{
+    float: right;
+} */
