--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -12,10 +12,176 @@
 
             <div class="main-panel">
                 <div class="content-wrapper"> 
-                    <div class="card">
-                        <% console.log(data) %>
+                    <div class="col-md-10 offset-xl-1">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div class="form-group">
+                                            <div class="text-center">
+                                                <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar rounded-circle img-circle img-thumbnail" alt="avatar">
+                                                <!-- <h6>Upload a different photo...</h6>
+                                                <input type="file" class="file-upload-info"> -->
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="card">
+                                                <div class="card-header p-2 pl-3 bg-secondary">
+                                                    <strong>
+                                                        Website
+                                                    </strong>
+                                                </div>
+                                                <div class="card-body p-2 text-center">
+                                                    <a href="#" class="">
+                                                        metamedias.co
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="card">
+                                                <div class="card-header p-2 pl-3 bg-secondary">
+                                                    <strong>
+                                                        Activities
+                                                    </strong>
+                                                </div>
+                                                <div class="card-body">
+                                                    <div class="form-group">
+                                                        <div class="d-flex justify-content-between align-items-center">
+                                                            Bots
+                                                            <span class="badge badge-primary text-white badge-pill">15</span>
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <div class="d-flex justify-content-between align-items-center">
+                                                            Challenges
+                                                            <span class="badge badge-danger text-white badge-pill">49</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="form-group">
+                                            <h2 class="font-weight-bolder text-left">
+                                                User Profile
+                                                <hr>
+                                            </h2>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="form-group">
+                                                    <label for="">Firest name: </label>
+                                                    <input type="text"
+                                                        class="form-control form-control-lg" 
+                                                        name="" id="" aria-describedby="helpId" 
+                                                        placeholder="ex: David" disabled>
+                                                    <small id="helpId" class="form-text text-muted" hidden>Help text</small>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-group">
+                                                  <label for="">Last name: </label>
+                                                  <input type="text"
+                                                    class="form-control form-control-lg" 
+                                                    name="" id="" aria-describedby="helpId" 
+                                                    placeholder="ex: James" disabled>
+                                                  <small id="helpId" class="form-text text-muted" hidden>Help text</small>
+                                                </div>
+                                            </div>
+                                        </div>
 
-                        
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="form-group">
+                                                    <label for="">User name: </label>
+                                                    <input type="text"
+                                                        class="form-control form-control-lg" 
+                                                        name="" id="" aria-describedby="helpId" 
+                                                        placeholder="ex: Rango941001" disabled>
+                                                    <small id="helpId" class="form-text text-muted" hidden>Help text</small>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-group">
+                                                    <label for="">Email: </label>
+                                                    <input type="text"
+                                                        class="form-control form-control-lg" 
+                                                        name="" id="" aria-describedby="helpId" 
+                                                        placeholder="ex: test@example.com" disabled>
+                                                    <small id="helpId" class="form-text text-muted" hidden>Help text</small>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="form-group">
+                                                    <label for="">Phone number: </label>
+                                                    <input type="text"
+                                                        class="form-control form-control-lg" 
+                                                        name="" id="" aria-describedby="helpId" 
+                                                        placeholder="ex: +17709194472" disabled>
+                                                    <small id="helpId" class="form-text text-muted" hidden>Help text</small>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="form-group">
+                                                    <label for="">Password: </label>
+                                                    <input type="text"
+                                                        class="form-control form-control-lg" 
+                                                        name="" id="" aria-describedby="helpId" 
+                                                        placeholder="************" disabled>
+                                                    <small id="helpId" class="form-text text-muted" hidden>Help text</small>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        
+                                        <div class="form-group">
+                                            <div class="d-flex justify-content-end align-items-right">
+                                                <button class="btn btn-primary btn-default m-1">
+                                                    <i class="mdi mdi-account-edit"></i>
+                                                    Edit
+                                                </button>
+    
+                                                <button class="btn btn-outline-danger btn-default m-1">
+                                                    <i class="mdi mdi-refresh"></i>
+                                                    Reset
+                                                </button>
+                                            </div>
+                                        </div><hr>
+
+                                        <div class="card">
+                                            <div class="card-header p-2 bg-secondary">
+                                                <strong class="font-weight-bolder">
+                                                    Update user role
+                                                </strong>
+                                            </div>
+
+                                            <div class="card-body p-3">
+                                                <div class="d-flex justify-content-end align-items-end">
+                                                    <button class="btn btn-success btn-sm">
+                                                        <i class="mdi mdi-circle-edit-outline"></i>
+                                                        Input token
+                                                    </button>
+                                                </div>
+
+                                                <div class="form-group">
+                                                    <label for="">Private token</label>
+                                                    <input type="text"
+                                                        class="form-control form-control-lg" 
+                                                        name="" id="" aria-describedby="helpId" 
+                                                        placeholder="You can use private token to update your role." disabled>
+                                                    <small id="helpId" class="form-text text-muted" hidden>Help text</small>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             <!-- content-wrapper ends -->
@@ -31,4 +197,6 @@
     <!-- container-scroller -->
 
     <% include ../partials/_scripts %>
+
+    <script src="app/js/profile.js"></script>
 </body>
