--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,8 +29,8 @@
     <link rel="stylesheet" href="app/css/mk-notifications.css">
     <link rel="stylesheet" href="app/css/custom-style.css">
 
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css"> -->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.jqueryui.min.css">
 
     <link rel="icon" href="assets/images/favicon/favicon.ico" type="image/x-icon">
 </head>
