--- a/views/pages/admin/user.ejs
+++ b/views/pages/admin/user.ejs
@@ -13,9 +13,12 @@
 
             <div class="main-panel">
                 <div class="content-wrapper">
+                    <div class="card">
+                        <div class="card-body">
 
-            
-                        <table id="example" class="table table-striped table-bordered" style="width:100%">
+                            <% console.log(data) %>
+
+                            <table id="example" class="display hover" style="width:100%">
                                 <thead>
                                     <tr>
                                         <th>Name</th>
@@ -495,8 +498,8 @@
                                     </tr>
                                 </tfoot>
                             </table>
-
-
+                        </div>
+                    </div>
 
 
                 </div>
