--- a/views/partials/_scripts.ejs
+++ b/views/partials/_scripts.ejs
@@ -13,8 +13,8 @@
 <script src="app/js/jquery.datetimepicker.full.min.js"></script>
 
 <script src=" https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
-
+<!-- <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script> -->
+<script src="https://cdn.datatables.net/1.10.19/js/dataTables.jqueryui.min.js "></script>
 
 <!-- Puser:js -->
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
